# 490p

./: .gitignore  README.md
eva_implementation/: cpacked.py  log_reg.py  test.py
eva_implementation/seal/: CMakeCache.txt  cmake_install.cmake  helpers.h  log_reg.cpp
src/eva/: README.md  eva_tests.py  log_reg.py
src/seal/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  helpers.h  log_reg.cpp  log_reg.h  seal_example.cpp  seal_tests.cpp  test_data.csv
